--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -2,5 +2,7 @@ Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+psycopg2==2.6.1
+requests==2.10.0
 SQLAlchemy==1.0.12
 Werkzeug==0.11.9
