--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "envify": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
+    "material-ui": "^0.15.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "reactify": "^1.1.1",
+    "react-tap-event-plugin": "^1.0.0",
     "uglify": "^0.1.5",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
