--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "material-ui": "^0.15.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-native-htmltext": "^0.1.2",
     "react-tap-event-plugin": "^1.0.0",
     "uglify": "^0.1.5",
     "vinyl-source-stream": "^1.1.0",
